--- a/definitions/cpp.yaml
+++ b/definitions/cpp.yaml
@@ -1,64 +1,10 @@
-﻿language: cs # must be the same as template e.g cs, go, java (normally this should be the language file extension e.g startup.cs )
+language: cpp # must be the same as template e.g cs, go, java (normally this should be the language file extension e.g startup.cs )
 version: 3.0
 
-short: Language defintion for Microsoft CSharp (C#)
+short: Language defintion for C++
 description: |
-  The cs (Microsoft C#) language definition defines a setup with datatypes default imports (imports you normally add to code), 
-  In C# it is possible to use two different methods of making a property nullable (in this lang def you can use either nullable or nullableAlternativ). 
-  This can be mapped in the config or project by specifing the property 'useNullableAlternative' in the code section to true or false - default value is false (empty == false)
+  The C++ language definition defines a setup with datatypes default imports (imports you normally add to code), 
   
-  This definition also uses a set of keys that is common in a C# project e.g model, interface, resolver etc. These keys is used in the templates to get
-  a proper namespace, prefix and/or postfix. The key is also used in a project file to export the template to a proper location.
-
-  In C# (or .Net) it is possible to inject code in a constructor or method. 
-
-defaultImports: 
-  - "using System;"
-  - "using System.Linq;"
-  - "using System.Threading;"
-  - "using System.Collections.Generic;"
-
-
-keys:
-  interface:
-    postfix: Repository
-    prefix: I
-  model:
-    postfix: Model
-  repository:   
-    postfix: Repository
-    inject:
-      - logging
-    imports: [
-      "using {{ .Code.RootNamespace }}.Extensions"
-    ]
-  service:
-    postfix: "Service"
-  controller:
-    postfix: "Controller" 
-    imports: [
-      "using {{ .Code.RootNamespace }}.Extensions"
-    ]
-  extension:
-    postfix: "Extension"      
-    namespace: "{{ .Code.RootNamespace }}.Extensions"
-
-inject:  
-  logging:
-    name: ILogger<{{ .Name }}>
-    propertyName: logger
-    imports: [
-      "using Microsoft.Logging"
-    ]
-  config:
-    name: IConfiguration<{{ .Name }}>
-    propertyName: config
-    imports: [
-      "using Microsoft.Extensions.Configuration;"
-    ]
-
-## maps datatype to language type
-## can be a mix of mssql, postgres, mysql etc
 datatypes: 
   string: 
     notNull: string
@@ -77,7 +23,7 @@ datatypes:
     nullable: bool?
     nullableAlternative: nullable<bool> # bool
   char: 
-    notNull: string
+    notNull: CString
     nullable: string
     nullableAlternative: nullable<decimal> # char
   date: 
